--- a/client/angular-moviedb/src/app/toolbar/toolbar.component.html
+++ b/client/angular-moviedb/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,4 @@
+
 <div class="navbar-fixed">
 
     <nav  role="navigation">
@@ -7,10 +8,10 @@
   
         <ul class="right hide-on-med-and-down">
   
-          <li> <a>LOGIN</a></li>
-          <li> <a>REGISTER</a></li>
+          <li> <a (click)="presentAuthDialog()" >LOGIN</a></li>
+          <li> <a (click)="presentAuthDialog('register')">REGISTER</a></li>
   
-          <li> <a >PROFILE</a></li>
+          <li> <a [routerLink]="['/profile']">PROFILE</a></li>
           <li> <a >LOGOUT</a></li>
   
         </ul>
@@ -18,5 +19,7 @@
       </div>
   
     </nav>
-    
+  
   </div>
+  
+  <lets-react-auth-dialog #authDialog></lets-react-auth-dialog>
