--- a/client/angular-moviedb/src/app/auth-dialog/auth-dialog.component.html
+++ b/client/angular-moviedb/src/app/auth-dialog/auth-dialog.component.html
@@ -1,35 +1,38 @@
-
-
 <div class="modal" materialize="modal" [materializeActions]="modalActions">
-
-
-    <div class="modal-content">
-  
+  <div class="modal-content">
+    <div class="row">
       <div class="row">
-  
-        <div class="row">
-  
-          <span class="modal-close right">
-            <i class="fa fa-times" aria-hidden="true"></i>
-          </span>
-        </div>
-  
-        <div class="row">
-          Current mode: {{authMode}}
-        </div>
-  
-  
-        <div class="row">
-          <span *ngIf="isLoginMode()">
-            Need an account? <a (click)="authMode='register'">Click here to register.</a>
-          </span>
-          <span *ngIf="isRegisterMode()">
-            Already have an account? <a (click)="authMode='login'">Click here to login.</a>
-          </span>
-        </div>
-  
+
+        <span class="modal-close right">
+          <i class="fa fa-times" aria-hidden="true"></i>
+        </span>
       </div>
-  
+
+      <div class="row">
+        <h3 class="grey-text text-darken-2">{{authMode}}</h3>
+
+        <lets-react-login-form (onFormResult)="onLoginFormResult($event)"
+                        *ngIf="isLoginMode()">
+
+        </lets-react-login-form>
+        <lets-react-register-form (onFormResult)="onRegisterFormResult($event)"
+                           *ngIf="isRegisterMode()">
+
+        </lets-react-register-form>
+      </div>
+
+
+      <div class="row">
+        <span class="grey-text text-darken-2" *ngIf="isLoginMode()">
+          Need an account? <a (click)="authMode='register'">Click here to register.</a>
+        </span>
+        <span class="grey-text text-darken-2" *ngIf="isRegisterMode()">
+          Already have an account? <a (click)="authMode='login'">Click here to login.</a>
+        </span>
+      </div>
+
     </div>
-  
+
   </div>
+
+</div>
